# sky-piano

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  The_Legend_of_Heroes_Trails_in_the_Sky_The_Whereabouts_of_Light.txt  mapping.toml  mapping.toml.default
.github/workflows/: ci.yml
docs/: architecture.md  design.md  tasks.md
docs/codelabs/: 01-getting-started.md
scripts/: convert_sky_studio.py  generate_songs.py  parse_midi.py
songs/: -Counting Stars- 安迪Zoey.txt  -Late for the Date- 安迪Zoey.txt  -我怀念的- 安迪Zoey.txt  -遠い空へ.txt  -青花瓷- 安迪Zoey.txt  33只对你有感觉.txt  527831116893641多情种.txt  7 years.txt  Always Online.txt  Apologize(黒子これも).txt  Arrietty's_Song.txt  Asphyxia逆时针向(暴躁).txt  Astronomia.txt  Attention.txt  A叔终极还原My dearest.txt  BTS 春日 spring day.txt  Bad_Apple.txt  Blank Space .txt  C418_Danny.txt  C418_Hal2.txt  C418_Wet_Hands.txt  Can Can 康康舞曲.txt  Canon.C.txt  Canon卡农_C大调_简易版.txt  Co_Chac_Yeu_La_Day-MTP.txt  Comptine.txt  Counting Star.txt  Creeper.txt  Done for me：德鲁纳酒店ost.txt  Dream_It_Possible.txt  Dusk(暴躁).txt  Example_Canon.C.txt  Experience(暴躁).txt  Faded.txt  Fake Love.txt  Falling Flower 舞い落ちる花びら.txt  Faye's Theme  喵桑.txt  Flower Dance.txt  Flower_Dance.txt  Fly me to the moon.txt  (+639 more)
src/: keyboard.rs  lib.rs  main.rs  mapper.rs  midi.rs  player.rs
tests/: golden_tests.rs
tests/golden/: The_Legend_of_Heroes_Trails_in_the_Sky_The_Whereabouts_of_Light.txt  mary.txt  ode_to_joy.txt  scale.txt  twinkle.txt
