[package]
name = "sky-piano"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sky-piano"
path = "src/main.rs"

[dependencies]
rdev = "0.5"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
